Fixed CSS, made sure it aligns to the top of the frame

--- a/design/standard/stylesheets/debug-toolbar.css
+++ b/design/standard/stylesheets/debug-toolbar.css
@@ -25,6 +25,7 @@
     width: 75%;
     right: 0px;
     height: 100%;
+    top: 10px;
 }
 
 .debug-output .debug-button
